# ableton-cli

./: .gitignore  .quality-harness.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
docs/: mastering.md  protocol.md  quality-harness-phase2.md  quality-harness-todo.md  remix-mastering-workflow.md
output/: chiptune_noise_notes.json  chiptune_sq1_notes.json  chiptune_sq2_notes.json  chiptune_tri_notes.json  quality-harness-action-log.json  quality-harness-report.json
scripts/: generate_man.sh  install_git_hooks.sh  install_man.sh  skill_runner_examples.sh
tests/: conftest.py  test_ableton_client.py  test_app_factory.py  test_audio_mastering_analysis.py  test_audio_transient_analysis.py  test_bootstrap.py  test_ci_summary.py  test_ci_workflow.py  test_cli_json_output.py  test_cli_new_commands.py  test_cli_validation.py  test_client_backends.py  test_command_registry.py  test_config_precedence.py  test_contract_checks.py  test_contracts.py  test_create_tech_house.py  test_dev_checks.py  test_dev_checks_enforce.py  test_docs_hygiene.py  test_doctor.py  test_errors.py  test_execution_controls.py  test_exit_codes.py  test_formatters.py  test_install_remote_script.py  test_install_skill.py  test_live_backend.py  test_live_backend_parts_browser_module.py  test_output.py  test_platform_detection.py  test_platform_paths.py  test_protocol.py  test_public_contract_snapshot.py  test_quality_harness_config.py  test_readme_structure.py  test_remote_command_backend.py  test_remote_control_surface.py  (+7 more)
(+209 files in other folders)
