[project]
name = "ableton-cli"
version = "0.1.0"
description = "CLI tool to control and inspect Ableton Live via a local Remote Script"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ableton-cli contributors" }
]
dependencies = [
  "typer>=0.12.0,<1.0.0",
  "platformdirs>=4.2.0,<5.0.0",
  "tomli>=2.0.1,<3.0.0",
]

[project.scripts]
ableton-cli = "ableton_cli.cli:main"

[build-system]
requires = ["hatchling>=1.26.0,<2.0.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
  "build>=1.2.1,<2.0.0",
  "pyyaml>=6.0.2,<7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
